--- a/_layouts/twitter_layout.html
+++ b/_layouts/twitter_layout.html
@@ -106,7 +106,7 @@ background: #172448;
 {{ content }}
 
 <ul class="taxonomy__index">
-  {% assign postsInYear = site.tweets-md | where_exp: "item", "item.hidden != true" | group_by_exp: 'post', 'post.date | date: "%Y"' %}
+  {% assign postsInYear = site.tweets-md | where_exp: "item", "item.hidden != true" | group_by_exp: 'post', 'post.date | date: "%Y"' | reverse %}
   {% for year in postsInYear %}
     <li>
       <a href="#{{ year.name }}">
@@ -118,11 +118,11 @@ background: #172448;
 
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 {% assign postsByYear = site.tweets-md | where_exp: "item", "item.hidden != true" | group_by_exp: 'post', 'post.date | date: "%Y"' %}
-{% for year in postsByYear %}
+{% for year in postsByYear | reverse %}
   <section id="{{ year.name }}" class="taxonomy__section">
     <h2 class="archive__subtitle">{{ year.name }}</h2>
     <div class="entries-{{ entries_layout }}">
-      {% for post in year.items | reverse %}
+      {% for post in year.items %}
         {% include archive-single_tweet.html type=entries_layout %}
       {% endfor %}
     </div>
