--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -136,6 +136,29 @@ blockquote {
 .page__content a{
     color: #7fa6e1 ;
 }
+.page__content{
+    overflow-x: hidden;
+}
+.page__meta .page__date strong {
+    background-color: rgb(14 24 43);
+    border: 1px dashed #49b9de;
+    border-radius: 3px;
+    color: white;
+    padding: 0px 10px 0px 10px;
+}
+.page__meta .page__date .dt-published {
+  background-color: rgb(14 24 43);
+    border: 1px dashed #49b9de;
+    border-radius: 3px;
+    color: white;
+    padding: 0px 10px 0px 10px;
+}
+@media screen and (max-width: 80em) {
+  .author__urls-wrapper .author__urls span.label {
+    padding-left: 5px;
+    color: black;
+}
+}
 </style>
 <div id="main" role="main">
   {% include sidebar.html %}
