--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -27,6 +27,7 @@ hr {
 body{
     background-color: #121b37 !important;
     color: white;
+    overflow-x: hidden;
   }
     /* main strollbar */
 
@@ -135,12 +136,27 @@ blockquote {
 .page__content a{
     color: #7fa6e1 ;
 }
-
-@media (min-width: 64em){
-.page {
-    float: right;
-    width: calc(100% - 400px);
-    padding-right: 0px;
+.page__content{
+    overflow-x: hidden;
+}
+.page__meta .page__date strong {
+    background-color: rgb(14 24 43);
+    border: 1px dashed #49b9de;
+    border-radius: 3px;
+    color: white;
+    padding: 0px 10px 0px 10px;
+}
+.page__meta .page__date .dt-published {
+  background-color: rgb(14 24 43);
+    border: 1px dashed #49b9de;
+    border-radius: 3px;
+    color: white;
+    padding: 0px 10px 0px 10px;
+}
+@media screen and (max-width: 80em) {
+  .author__urls-wrapper .author__urls span.label {
+    padding-left: 5px;
+    color: black;
 }
 }
 </style>
