solve font-size problem

--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -153,10 +153,10 @@ blockquote {
     color: white;
     padding: 0px 10px 0px 10px;
 }
-@media screen and (max-width: 80em) {
+@media screen and (max-width: 1023px) {
   .author__urls-wrapper .author__urls span.label {
     padding-left: 5px;
-    color: black;
+    color: black !important;
 }
 }
 </style>
