--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,8 +5,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background-color: #000000;
-    --text-color: #ffffff;
+    --background-color: #000000 !important;
+    --text-color: #ffffff !important;
   }
 }
 
