--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,24 +1,15 @@
-:root {
-  --background-color: #ffffff;
-  --text-color: #000000;
-}
-
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background-color: #000000 !important;
-    --text-color: #ffffff !important;
+  .theme-a.adaptive {
+    background: black !important;
+    color: #fff !important;
   }
 }
-
 
 
 body{
   background: url(/assets/images/background.png);
  /* Full height */
 height: 100%;
-background-color: var(--background-color);
-color: var(--text-color);
-
 /* Center and scale the image nicely */
 
 background-position: center;
