--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,6 +3,29 @@
     background: black !important;
     color: #fff !important;
   }
+  .page__inner-wrap h3 {
+    display: block;
+    margin-top: 30px;
+    background-color: rgb(0 0 0);
+    padding: 10px 20px 10px 20px;
+    border: 2px dashed #49b9de;
+    border-radius: 5px;
+    box-shadow: 0px 0px 0px #b6e7d6;
+}
+.h-entry li strong {
+  background-color: rgb(0 0 0);
+  border: 1px dashed #05A069;
+  border-radius: 3px;
+  padding: 0px 10px 0px 10px;
+}
+.page__taxonomy strong {
+  margin-right: 10px;
+  background-color: #000000;
+  border: 1px dashed #05A069;
+  border-radius: 3px;
+  padding: 0px 10px 0px 10px;
+  color: rgb(234, 234, 234);
+}
 }
 
 
@@ -329,7 +352,7 @@ background-blend-mode: multiply;
     vertical-align: top;
     width: 100px;
     height: 36px;
-    padding-left: 61px;
+    padding-left: 0px;
 }
   .side-2{
     flex: 1;
@@ -586,6 +609,7 @@ font-size: 12px !important;
     max-width: 120px !important;
     border-radius: 50%;
     margin-top: 10px;
+
     margin-left: 0px !important;
 }
 }
@@ -1061,6 +1085,7 @@ blockquote{
       border-radius: 50%;
       margin-top: 10px;
       margin-left: 0px !important;
+      width: 40px;
   }
   .verified{
     display: none !important;
@@ -1080,6 +1105,7 @@ blockquote{
   .sidebar.sticky .verified {
       display: inline !important;
       margin-left: 135px;
+      display: none;
   }
   .sidebar.sticky .h-card {
       margin-right: 20px;
