--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,25 +6,92 @@
   .page__inner-wrap h3 {
     display: block;
     margin-top: 30px;
-    background-color: rgb(0 0 0);
+    background-color: rgb(0 0 0) !important;
     padding: 10px 20px 10px 20px;
-    border: 2px dashed #49b9de;
+    border: 2px dashed #49b9de !important;
     border-radius: 5px;
-    box-shadow: 0px 0px 0px #b6e7d6;
+    box-shadow: 0px 0px 0px #b6e7d6 !important;
+}
+.page__inner-wrap img {
+  border: 2px dashed #49b9de !important;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px #b6e7d6 !important;
+  margin: 10px;
+}
+.definition {
+  background-color: rgb(0 0 0) !important;
+  padding: 10px 20px 10px 20px;
+  border: 2px dashed #05A069 !important;
+  box-shadow: 0px 0px 0px #b6e7d6 !important;
+  border-radius: 5px;
+}
+.about_website {
+  background: black !important;
+  padding: 20px 40px 20px 40px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px #b6e7d6 !important;
+  margin-bottom: 40px;
+  border: 2px dashed #49b9de !important;
+  color: white !important;
+}
+.page__inner-wrap h2 {
+  display: block;
+  margin-top: 30px;
+  background-color: rgb(0 0 0) !important;
+  padding: 10px 20px 10px 20px;
+  border: 2px dashed #49b9de !important;
+  border-radius: 5px;
+  box-shadow: 0px 0px 1px #d2f8eb !important;
 }
 .h-entry li strong {
-  background-color: rgb(0 0 0);
-  border: 1px dashed #05A069;
+  background-color: rgb(0 0 0) !important;
+  border: 1px dashed #49b9de !important;
   border-radius: 3px;
   padding: 0px 10px 0px 10px;
+}
+blockquote {
+  margin-top: 30px;
+  background-color: rgb(0 0 0) !important;
+  padding: 10px 20px 10px 20px;
+  border: 2px dashed #49b9de !important;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px #b6e7d6 !important;
+}
+.page__inner-wrap h3 {
+  display: block;
+  margin-top: 30px;
+  background-color: rgb(0, 0, 0) !important;
+  padding: 10px 20px 10px 20px;
+  border: 2px dashed #49b9de !important;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px #b6e7d6 !important;
+}
+.post-catalog_list {
+  padding: 0.5rem 1.5rem 1rem;
+  border-radius: 10px;
+  background: black !important;
+  border: 2px dashed #05A069 !important;
+  box-shadow: 0px 0px 0px #b6e7d6 !important;
+}
+.post-catalog_order::before {
+  background: rgb(73 73 73) !important;
+}
+.see-all_text {
+  display: block;
+  margin-top: 30px;
+  background-color: rgb(0 0 0) !important;
+  padding: 10px 20px 10px 20px;
+  border: 2px dashed #49b9de !important;
+  box-shadow: 0px 0px 0px #b6e7d6 !important;
+  border-radius: 5px;
 }
 .page__taxonomy strong {
   margin-right: 10px;
   background-color: #000000;
-  border: 1px dashed #05A069;
+  border: 1px dashed #49b9de;
   border-radius: 3px;
   padding: 0px 10px 0px 10px;
-  color: rgb(234, 234, 234);
+  color: rgb(234, 234, 234) !important;
 }
 }
 
@@ -352,7 +419,7 @@ background-blend-mode: multiply;
     vertical-align: top;
     width: 100px;
     height: 36px;
-    padding-left: 0px;
+    padding-left: 0px !important;
 }
   .side-2{
     flex: 1;
@@ -1085,7 +1152,7 @@ blockquote{
       border-radius: 50%;
       margin-top: 10px;
       margin-left: 0px !important;
-      width: 40px;
+      width: 40px !important;
   }
   .verified{
     display: none !important;
@@ -1105,12 +1172,12 @@ blockquote{
   .sidebar.sticky .verified {
       display: inline !important;
       margin-left: 135px;
-      display: none;
+      display: none !important;
   }
   .sidebar.sticky .h-card {
-      margin-right: 20px;
+      margin-right: 20px !important;
   }
   .sidebar.sticky .h-card .author__avatar  {
-      margin-left: 40px;
+      margin-left: 40px !important;
   }
   }
