--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -21,7 +21,7 @@
 .definition {
   background-color: rgb(0 0 0) !important;
   padding: 10px 20px 10px 20px;
-  border: 1px dashed #05A069 !important;
+  border: 2px dashed #05A069 !important;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
   border-radius: 5px;
 }
@@ -31,7 +31,7 @@
   border-radius: 5px;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
   margin-bottom: 40px;
-  border: 1px dashed #05A069 !important;
+  border: 2px dashed #05A069 !important;
   color: white !important;
 }
 .page__inner-wrap h2 {
@@ -39,13 +39,13 @@
   margin-top: 30px;
   background-color: rgb(0 0 0) !important;
   padding: 10px 20px 10px 20px;
-  border: 1px dashed #05A069 !important;
+  border: 2px dashed #05A069 !important;
   border-radius: 5px;
   box-shadow: 0px 0px 1px #d2f8eb !important;
 }
 .h-entry li strong {
   background-color: rgb(0 0 0) !important;
-  border: 1px dashed #05A069 !important;
+  border: 2px dashed #05A069 !important;
   border-radius: 3px;
   padding: 0px 10px 0px 10px;
 }
@@ -53,7 +53,7 @@ blockquote {
   margin-top: 30px;
   background-color: rgb(0 0 0) !important;
   padding: 10px 20px 10px 20px;
-  border: 1px dashed #05A069 !important;
+  border: 2px dashed #05A069 !important;
   border-radius: 5px;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
 }
@@ -62,7 +62,7 @@ blockquote {
   margin-top: 30px;
   background-color: rgb(0, 0, 0) !important;
   padding: 10px 20px 10px 20px;
-  border: 1px dashed #05A069 !important;
+  border: 2px dashed #05A069 !important;
   border-radius: 5px;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
 }
@@ -70,7 +70,7 @@ blockquote {
   padding: 0.5rem 1.5rem 1rem;
   border-radius: 10px;
   background: black !important;
-  border: 1px dashed #05A069 !important;
+  border: 2px dashed #05A069 !important;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
 }
 .post-catalog_order::before {
@@ -81,21 +81,59 @@ blockquote {
   margin-top: 30px;
   background-color: rgb(0 0 0) !important;
   padding: 10px 20px 10px 20px;
-  border: 1px dashed #05A069 !important;
+  border: 2px dashed #05A069 !important;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
   border-radius: 5px;
 }
 .page__taxonomy strong {
   margin-right: 10px;
-  background-color: #000000;
-  border: 1px dashed #05A069;
+  background-color: #000000 !important;
+  border: 1px dashed #05A069 !important;
   border-radius: 3px;
   padding: 0px 10px 0px 10px;
   color: rgb(234, 234, 234) !important;
 }
+.fa-arrow-alt-circle-up {
+  margin-left: 90%;
+  font-size: xx-large;
+  padding: 8px;
+  border: 0px solid #04ff4baa;
+  background-color: #1c88bb;
+  border-radius: 6px;
+  position: fixed;
+  bottom: 0;
+  margin-bottom: 30px;
+ box-shadow: 0px 0px 0px black !important; 
 }
-
-
+.taxonomy__count {
+  color: #b0b0b0 !important;
+}
+.taxonomy__index a {
+  background-color: #000000 !important;
+  border: 1px dashed #05A069;
+  border-radius: 3px;
+  padding: 0px 10px 0px 10px;
+  color: white !important;
+}
+.page__meta .page__taxonomy-item {
+  background-color: #000000 !important;
+  border: 1px dashed #05A069;
+  border-radius: 3px;
+  padding: 0px 10px 0px 10px;
+}
+.page__meta .page__date strong {
+  background-color: #000000 !important;
+  border: 1px dashed #05A069;
+  border-radius: 3px;
+  padding: 0px 10px 0px 10px;
+}
+.page__meta .page__date .dt-published {
+  background-color: #000000 !important;
+  border: 1px dashed #05A069;
+  border-radius: 3px;
+  padding: 0px 10px 0px 10px;
+}
+}
 body{
   background: url(/assets/images/background.png);
  /* Full height */
@@ -1170,7 +1208,6 @@ blockquote{
       margin-left: 6em !important;
   }
   .sidebar.sticky .verified {
-      display: inline !important;
       margin-left: 135px;
       display: none !important;
   }
