--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -98,8 +98,8 @@ author_profile: true
     margin-left: 6em !important;
 }
 .sidebar.sticky .verified {
-    display: inline !important;
     margin-left: 135px;
+    display: none;
 }
 .sidebar.sticky .h-card {
     margin-right: 20px;
