--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -51,7 +51,7 @@
 }
 blockquote {
   margin-top: 30px;
-  background-color: rgb(0 0 0) !important;
+  background-color: #0a885b !important;
   padding: 10px 20px 10px 20px;
   border: 2px dashed #05A069 !important;
   border-radius: 5px;
@@ -126,6 +126,7 @@ blockquote {
   border: 1px dashed #05A069;
   border-radius: 3px;
   padding: 0px 10px 0px 10px;
+  color: rgb(234, 234, 234) !important;
 }
 .page__meta .page__date .dt-published {
   background-color: #000000 !important;
@@ -568,7 +569,7 @@ background-blend-mode: multiply;
 blockquote{
   margin-top: 30px;
   background-color: rgb(212, 255, 241);
-  padding: 10px 20px 10px 20px;
+  margin: 10px auto;
   border: 1px dashed #05A069;
   border-radius: 5px;
   box-shadow: 10px 10px 20px #b6e7d6;
