--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -3,6 +3,16 @@ layout: default
 author_profile: true
 ---
 <style>
+  @media (prefers-color-scheme: dark) {
+    blockquote {
+  margin-top: 30px;
+  background-color: #0a885b !important;
+  margin: 10px auto;
+  border: 0px dashed #05A069 !important;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px #b6e7d6 !important;
+}
+  }
   
   .wrapper .page__title{
       text-decoration: none !important;
