--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -52,8 +52,8 @@
 blockquote {
   margin-top: 30px;
   background-color: #0a885b !important;
-  padding: 10px 20px 10px 20px;
-  border: 2px dashed #05A069 !important;
+  margin: 10px auto;
+  border: 0px dashed #05A069 !important;
   border-radius: 5px;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
 }
@@ -97,7 +97,7 @@ blockquote {
   margin-left: 90%;
   font-size: xx-large;
   padding: 8px;
-  border: 0px solid #04ff4baa;
+  border: 0px solid #04ff4baa !important;
   background-color: #1c88bb;
   border-radius: 6px;
   position: fixed;
@@ -127,6 +127,16 @@ blockquote {
   border-radius: 3px;
   padding: 0px 10px 0px 10px;
   color: rgb(234, 234, 234) !important;
+}
+.page__content :not(pre)>code {
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
+  font-size: 0.8em;
+  background: #2f2f2f !important;
+  border-radius: 4px;
+}
+.page__inner-wrap a{
+  color: #5cf9c2;
 }
 .page__meta .page__date .dt-published {
   background-color: #000000 !important;
@@ -1153,7 +1163,7 @@ background-blend-mode: multiply;
 blockquote{
   margin-top: 30px;
   background-color: rgb(212, 255, 241);
-  padding: 10px 20px 10px 20px;
+  margin: 10px auto;
   border: 1px dashed #05A069;
   border-radius: 5px;
   box-shadow: 10px 10px 20px #b6e7d6;
