--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,6 +106,38 @@
           previousScroll = currentScroll;
         });
       });
+      document.addEventListener("DOMContentLoaded", function() {
+  // Get the modal
+  var modal = document.getElementById("lightbox-modal");
+
+  // Get the image and insert it inside the modal
+  var modalImg = document.getElementById("lightbox-img");
+
+  // Find all images to apply the lightbox feature
+  var images = document.querySelectorAll("img");
+
+  images.forEach(function(image) {
+    image.addEventListener("click", function() {
+      modal.style.display = "block";
+      modalImg.src = this.src;
+    });
+  });
+
+  // Get the <span> element that closes the modal
+  var closeBtn = document.getElementsByClassName("lightbox-close")[0];
+
+  // When the user clicks on <span> (x), close the modal
+  closeBtn.addEventListener("click", function() {
+    modal.style.display = "none";
+  });
+
+  // Close the lightbox if clicked outside the image
+  modal.addEventListener("click", function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  });
+});
 
     </script>
     
