--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -125,6 +125,40 @@ author_profile: true
     padding-right: 0px;
 }
 }
+/* The lightbox container */
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.9); /* Black background with opacity */
+}
+
+/* Lightbox content (image) */
+.lightbox-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/* Close button */
+.lightbox-close {
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 </style>
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
@@ -163,7 +197,10 @@ author_profile: true
           {% include page__meta.html %}
         </header>
       {% endunless %}
-
+      <div id="lightbox-modal" class="lightbox">
+        <span class="lightbox-close">&times;</span>
+        <img class="lightbox-content" id="lightbox-img">
+      </div>
       <section class="page__content e-content" itemprop="text">
         {% if page.toc %}
           <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">
