--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -146,6 +146,13 @@ author_profile: true
   transform: translate(-50%, -50%);
   max-width: 100%;
   max-height: 100%;
+  width: 70%;
+}
+.page__content img {
+  cursor: pointer;
+}
+.page__content a img {
+  cursor: default;
 }
 
 /* Close button */
