implement dark mode

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -151,9 +151,6 @@ author_profile: true
 .page__content img {
   cursor: pointer;
 }
-.page__content a img {
-  cursor: default;
-}
 
 /* Close button */
 .lightbox-close {
@@ -164,6 +161,9 @@ author_profile: true
   font-size: 40px;
   font-weight: bold;
   cursor: pointer;
+}
+.lightbox-close:hover {
+  color: rgb(189, 189, 189);
 }
 
 </style>
