--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -806,7 +806,7 @@ font-size: 12px !important;
   background-color: #fff;
   color: #3d4144;
   border: 1px solid #f2f3f3;
-  display: none !important;
+ 
 }
   .archive{
     margin: 0px 0px 0px 70px;      
@@ -1291,6 +1291,7 @@ blockquote{
   @media screen and (max-width: 64em){
     .sidebar.sticky {
       margin-left: 6em !important;
+      margin-right: -4em !important;
   }
   .sidebar.sticky .verified {
       margin-left: 135px;
