--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -784,7 +784,7 @@ font-size: 12px !important;
 }
 @media screen and (min-width: 42em){
   .sidebar{
-    margin-left: 4em !important;
+    margin-left: 5em !important;
   }
 }
 @media screen and (max-width: 64em){
@@ -806,20 +806,20 @@ font-size: 12px !important;
   background-color: #fff;
   color: #3d4144;
   border: 1px solid #f2f3f3;
- 
+  position: absolute !important;
+  margin-left: -2rem !important;
+  margin-top: 3.2rem !important;
 }
   .archive{
     margin: 0px 0px 0px 70px;      
   }
 
   #main{
-    margin-left: -73px !important;
+    margin-left: -75px !important;
     padding-left: 2em !important;
-    padding-right: 3em !important;
+    padding-right: 2em !important;
   }
-  .sidebar.sticky{
-    margin-left: 2em !important;
-  }
+
   .verified {
     display: inline;
     width: 40px;
@@ -1290,7 +1290,7 @@ blockquote{
   }
   @media screen and (max-width: 64em){
     .sidebar.sticky {
-      margin-left: 6em !important;
+      margin-left: 5em !important;
       margin-right: -4em !important;
   }
   .sidebar.sticky .verified {
