--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -121,7 +121,7 @@ author_profile: true
 @media (min-width: 64em){
 .page {
     float: right;
-    width: calc(100% - 400px);
+    width: calc(100%);
     padding-right: 0px;
 }
 }
