--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1152,7 +1152,7 @@ background-blend-mode: multiply;
   }
   .archive {
     float: right;
-    width: calc(100% - 480px);
+    width: calc(100% - 400px);
     padding-right: 1px;
 }
   }
@@ -1318,3 +1318,22 @@ blockquote{
       margin-left: 40px !important;
   }
   }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    #main {
+      margin-left: -75px !important;
+      padding-left: 2em !important;
+      padding-right: 0em !important;
+  }
+  .archive {
+    float: right;
+    width: calc(100% - 370px) !important;
+    padding-right: 1px;
+}
+.author__avatar img {
+  max-width: 130px !important;
+  border-radius: 50%;
+  margin-top: 10px;
+  margin-left: 0px !important;
+  width: 100px !important;
+}
+}
