--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -165,7 +165,37 @@ author_profile: true
 .lightbox-close:hover {
   color: rgb(189, 189, 189);
 }
-
+@media (min-width: 768px) and (max-width: 1024px) {
+    
+    .author__avatar img {
+      max-width: 130px !important;
+      border-radius: 50%;
+      margin-top: 10px;
+      margin-left: 0px !important;
+      width: 100px !important;
+    }
+    .sticky {
+      clear: both;
+      position: relative !important;
+      position: -webkit-sticky;
+      top: 2em;
+    }
+    .archive {
+      float: right;
+      width: calc(100% - 100px);
+      padding-right: 1px;
+    }
+    .sidebar.sticky {
+      margin-left: 8em !important;
+      margin-right: -4em !important;
+    }
+    .author__bio {
+        margin-top: -100px;
+        margin-bottom: 20px;
+        margin-left: 200px;
+        width: 100%;
+    }
+    }
 </style>
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
