--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1325,24 +1325,12 @@ blockquote{
   border-radius: 50%;
   margin-top: 10px;
   margin-left: 0px !important;
-  width: 100px !important;
-}
-.sticky {
-  clear: both;
-  position: relative !important;
-  position: -webkit-sticky;
-  top: 2em;
+  width: 130px;
 }
 .archive {
   float: right;
-  width: calc(100% - 100px);
+  width: calc(100% - 400px);
   padding-right: 1px;
 }
-.sidebar.sticky {
-  margin-left: 8em !important;
-  margin-right: -4em !important;
-}
-.author__bio {
-  margin: 35px;
-}
+
 }
