--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -189,6 +189,17 @@ author_profile: true
       margin-left: 8em !important;
       margin-right: -4em !important;
     }
+    
+    }
+    @media (min-width: 950px) and (max-width: 1024px) {
+      .sidebar {
+        float: left;
+        width: calc(300px - -22em) !important;
+        opacity: 1;
+        -webkit-transition: opacity 0.2s ease-in-out;
+        transition: opacity 0.2s ease-in-out;
+        margin-bottom: 45px;
+    }
     .author__bio {
         margin-top: -100px;
         margin-bottom: 20px;
