--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1325,12 +1325,50 @@ blockquote{
   border-radius: 50%;
   margin-top: 10px;
   margin-left: 0px !important;
-  width: 130px;
+  width: 100px;
 }
 .archive {
   float: right;
-  width: calc(100% - 400px);
+  width: calc(100% - 100px);
   padding-right: 1px;
 }
-
+.author__bio {
+  margin-left: 2em;
+}
+.btn--inverse {
+  background-color: #fff;
+  color: #3d4144;
+  border: 1px solid #f2f3f3;
+  position: absolute !important;
+  margin-left: -2rem !important;
+  margin-top: 2rem !important;
+}
+.author__urls {
+  display: none;
+  position: absolute;
+  right: 0;
+  margin-top: 74px !important;
+  padding: 10px;
+  list-style-type: none;
+  border: 1px solid #f2f3f3;
+  border-radius: 4px;
+  background: #fff;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  cursor: default;
+  background-color: black !important;
+}
+}
+@media (min-width: 950px) and (max-width: 1024px) {
+  .author__avatar img {
+    max-width: 130px !important;
+    border-radius: 50%;
+    margin-top: 10px;
+    margin-left: 0px !important;
+    width: 130px;
+  }
+  .archive {
+    float: right;
+    width: calc(100% - 400px);
+    padding-right: 1px;
+  }
 }
