--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -166,7 +166,9 @@ author_profile: true
   color: rgb(189, 189, 189);
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-    
+  .page{
+    padding-right: 50px !important;
+  }
     .author__avatar img {
       max-width: 130px !important;
       border-radius: 50%;
@@ -190,7 +192,6 @@ author_profile: true
       margin-right: -4em !important;
       margin-bottom: 5em;
     }
-    
     }
     @media (min-width: 950px) and (max-width: 1024px) {
       .sidebar {
@@ -216,9 +217,9 @@ author_profile: true
         color: #3d4144;
         border: 1px solid #f2f3f3;
         position: absolute;
-        margin-left: 33rem;
-        margin-top: -1.5em;
-        display: block;
+        margin-left: 33rem !important;
+        margin-top: -1.5em !important;
+        display: block !important;
     }
 
     }
