--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1363,12 +1363,30 @@ blockquote{
     max-width: 130px !important;
     border-radius: 50%;
     margin-top: 10px;
-    margin-left: 0px !important;
+    margin-left: 40px !important;
     width: 100px !important;
   }
   .archive {
     float: right;
     width: calc(100% - 400px);
-    padding-right: 1px;
+    margin-top: 1.5em;
   }
+  .author__urls-wrapper {
+    display: block;
+    margin-left: 2em;
+    margin-top: 1em;
+}
+.author__urls {
+  display: contents;
+  position: absolute;
+  right: 0;
+  margin-top: 74px !important;
+  padding: 10px;
+  list-style-type: none;
+  border: 1px solid #f2f3f3;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  cursor: default;
+  margin-left: 51px;
+}
 }
