--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -219,8 +219,13 @@ author_profile: true
         position: absolute;
         margin-left: 33rem !important;
         margin-top: -1.5em !important;
-        display: block !important;
+        display: none !important;
     }
+    .author__urls-wrapper {
+    display: flex;
+    margin-left: 21em;
+    margin-top: 1em;
+}
 
     }
 </style>
