--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -158,6 +158,13 @@ blockquote {
     padding-left: 5px;
     color: black !important;
 }
+@media (min-width: 64em) {
+    .page {
+        float: inline-end;
+        width: calc(100% - 300px);
+        padding-inline-end: 0px;
+    }
+}
 }
 </style>
 <div id="main" role="main">
