--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -161,7 +161,7 @@ blockquote {
 @media (min-width: 64em) {
     .page {
         float: inline-end;
-        width: calc(100% - 300px);
+        width: calc(100% - 300px) !important;
         padding-inline-end: 0px;
     }
 }
