--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -158,13 +158,14 @@ blockquote {
     padding-left: 5px;
     color: black !important;
 }
+}
 @media (min-width: 64em) {
     .page {
         float: inline-end;
         width: calc(100% - 300px) !important;
-        padding-inline-end: 0px;
+        padding-inline-end: 50px !important; 
     }
-}
+
 }
 </style>
 <div id="main" role="main">
