adjust margin in tweets post

--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -18,164 +18,7 @@ layout: default
   {% endunless %}
 {% endif %}
 <style>
-hr {
-    display: block;
-    margin-top: 4em;
-    border: 0;
-    border-top: 1px solid #596060;
-}
-body{
-    background-color: #121b37 !important;
-    color: white;
-    overflow-x: hidden;
-  }
-    /* main strollbar */
-
-/* width */
-::-webkit-scrollbar {
-width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-background: #f1f1f1; 
-border: 1px solid #05A069;
-border-radius: 10px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-background: #121b37; 
-border-radius: 10px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-background: #172448; 
-}
-
-/* sidebar strollbar */
-
-/* width */
-.sidebar::-webkit-scrollbar {
-width: 5px;
-}
-
-/* Track */
-.sidebar::-webkit-scrollbar-track {
-background: #f1f1f1; 
-}
-.sidebar::-webkit-scrollbar-track {
-border-radius: 10px;
-border: 1px solid #05A069;
-}
-
-/* Handle */
-.sidebar::-webkit-scrollbar-thumb {
-background: #121b37; 
-border-radius: 10px;
-}
-
-/* Handle on hover */
-.sidebar::-webkit-scrollbar-thumb:hover {
-background: #172448; 
-}
-.page__hero--overlay{
-  background-color: #3466ff;
-}
-
-  .taxonomy__index a {
-    background-color: #0c2f72;
-    border: 1px dashed #15d38f;
-    border-radius: 3px;
-    padding: 0px 10px 0px 10px;
-}
-
-.taxonomy__section .archive__subtitle {
-    clear: both;
-    border: 0;
-    color: white;
-}
-.page__footer{
-  background-color: #0c1327 !important;
-  border-top: 1px solid white;
-}
-.side-second-1 button {
-    background-color: #121b37;
-    border: 1px solid #0b2048;
-}
-.side-second-1 button:hover {
-    background-color: #162143;
-}
-.fa-arrow-alt-circle-up {
-    margin-left: 90%;
-    font-size: xx-large;
-    padding: 8px;
-    border: 1px solid #193722aa;
-    background-color: #121b37;
-    border-radius: 6px;
-    position: fixed;
-    bottom: 0;
-    margin-bottom: 30px;
-    box-shadow: 2px 2px 5px #172448;
-}
-blockquote {
-    margin-top: 30px;
-    padding: 10px 20px 10px 20px;
-    border-radius: 5px;
-}
-
-blockquote {
-    margin-top: 30px;
-    background-color: rgb(14 24 43);
-    padding: 10px 20px 10px 20px;
-    border: 1px dashed #49b9de;
-    border-radius: 5px;
-    box-shadow: 2px 2px 10px rgb(24 32 48);
-}
-.page__content a{
-    color: #7fa6e1 ;
-}
-.page__content{
-    overflow-x: hidden;
-}
-.page__meta .page__date strong {
-    background-color: rgb(14 24 43);
-    border: 1px dashed #49b9de;
-    border-radius: 3px;
-    color: white;
-    padding: 0px 10px 0px 10px;
-}
-.page__meta .page__date .dt-published {
-  background-color: rgb(14 24 43);
-    border: 1px dashed #49b9de;
-    border-radius: 3px;
-    color: white;
-    padding: 0px 10px 0px 10px;
-}
-@media screen and (max-width: 1023px) {
-  .author__urls-wrapper .author__urls span.label {
-    padding-left: 5px;
-    color: black !important;
-}
-}
-@media (min-width: 64em) {
-    .page {
-        float: inline-end;
-        width: calc(100% - 400px) !important;
-        padding-inline-end: 50px !important; 
-    }
-
-}
-
-@media (min-width: 64em) and (max-width: 80em) {
-    .page {
-        float: inline-end;
-        width: calc(100% - 300px) !important;
-        padding-inline-end: 50px !important; 
-    }
-
-}
+{% style_tweets_single.css %}
 </style>
 <div id="main" role="main">
   {% include sidebar.html %}
