solve error in running repo

--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -5,7 +5,8 @@
 /*
    Typography
    ========================================================================== */
-
+   $doc-font-size-medium: 16 !default;
+   
    $doc-font-size: 16 !default;
 
    /* paragraph indention */
