solve error in running repo

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -196,6 +196,7 @@ blockquote {
 .see-more-button:hover{
   background-color: #262626;
 }
+::
 }
 body{
   background: url(/assets/images/background.png);
