error in variable.css

--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -5,7 +5,7 @@
 /*
    Typography
    ========================================================================== */
-   $doc-font-size-medium: 16 !default;
+   $doc-font-size-large: 1.25rem !default;
    
    $doc-font-size: 16 !default;
 
@@ -156,8 +156,7 @@
       Grid
       ========================================================================== */
    
-   $right-sidebar-width-narrow: 400px !default;
-   $right-sidebar-width-narrow-one: 300px !default;
+   $right-sidebar-width-narrow: 200px !default;
    $right-sidebar-width: 300px !default;
    $right-sidebar-width-wide: 400px !default;
    
