--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -6,7 +6,8 @@
    Typography
    ========================================================================== */
    $doc-font-size-large: 1.25rem !default;
-   
+   $doc-font-size-medium: 1.25rem !default;
+
    $doc-font-size: 16 !default;
 
    /* paragraph indention */
