correct sticky sidebar in mini pc mode

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1409,6 +1409,9 @@ blockquote{
 }
 }
 @media (min-width: 1025px) and (max-width: 1279px) {
+  .sidebar.sticky {
+    display: contents !important;
+}
   .h-card{
     display: flex !important;
   }
