--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -25,6 +25,13 @@
   box-shadow: 0px 0px 0px #b6e7d6 !important;
   border-radius: 5px;
 }
+.social-icons .fa-github {
+  color: #f6f6f6;
+}
+.author__urls.is--visible {
+  display: block;
+  background: #000000 !important;
+}
 .about_website {
   background: black !important;
   padding: 20px 0px 20px 0px;
