make dotted styling decent

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,9 @@
     .arrow-anchor{
         color: white !important;
     }
+    .lightbox-content {
+        object-fit: contain;
+    }
 </style>
 </style>
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
