--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -71,7 +71,7 @@ author_profile: true
   margin-top: 30px;
   background-color: rgb(137, 237, 204);
   padding: 10px 20px 10px 20px;
-  border: 1px dashed #49b9de;
+  border: 0px dashed #49b9de;
   border-radius: 5px;
   box-shadow: 2px 2px 10px #d2f8eb;
 }
@@ -80,9 +80,9 @@ author_profile: true
   margin-top: 30px;
   background-color: rgb(137, 237, 204);
   padding: 10px 20px 10px 20px;
-  border: 1px dashed #49b9de;
+  border: 0px dashed #49b9de;
   border-radius: 5px;
-  box-shadow: 2px 2px 20px #b6e7d6;
+  box-shadow: 2px 2px 7px #b6e7d6;
 }
 @media screen and (max-width: 64em){
 .page .page__inner-wrap {
@@ -147,6 +147,7 @@ author_profile: true
   max-width: 100%;
   max-height: 100%;
   width: 70%;
+  object-fit: contain;
 }
 .page__content img {
   cursor: pointer;
