--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,7 @@
 :root {
   --blockquote: #0a885b;
   --content-header: #05A069;
+  --content-header_dark: #474747;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -13,12 +14,12 @@
     margin-top: 30px;
     background-color: rgb(0 0 0) !important;
     padding: 10px 20px 10px 20px;
-    border: 0p1 dashed var(--content-header) !important;
+    border: 0p1 dashed var(--content-header_dark) !important;
     border-radius: 5px;
     box-shadow: 0px 0px 0px #b6e7d6 !important;
 }
 .page__inner-wrap img {
-  border: 0px dashed var(--content-header) !important;
+  border: 0px dashed var(--content-header_dark) !important;
   border-radius: 5px;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
   margin: 10px;
@@ -26,7 +27,7 @@
 .definition {
   background-color: rgb(0 0 0) !important;
   padding: 10px 20px 10px 20px;
-  border: 0px dashed var(--content-header) !important;
+  border: 0px dashed var(--content-header_dark) !important;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
   border-radius: 5px;
 }
@@ -43,7 +44,7 @@
   border-radius: 5px;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
   margin-bottom: 40px;
-  border: 0px dashed var(--content-header) !important;
+  border: 0px dashed var(--content-header_dark) !important;
   color: white !important;
 }
 .page__inner-wrap h2 {
@@ -51,13 +52,13 @@
   margin-top: 30px;
   background-color: rgb(0 0 0) !important;
   padding: 10px 20px 10px 20px;
-  border: 0px dashed var(--content-header) !important;
+  border: 0px dashed var(--content-header_dark) !important;
   border-radius: 5px;
   box-shadow: 0px 0px 1px #d2f8eb !important;
 }
 .h-entry li strong {
   background-color: rgb(0 0 0) !important;
-  border: 0px dashed var(--content-header) !important;
+  border: 0px dashed var(--content-header_dark) !important;
   border-radius: 3px;
   padding: 0px 10px 0px 10px;
 }
@@ -66,7 +67,7 @@ blockquote {
   background-color: var(--blockquote) !important;
   margin: 10px auto;
   padding: 15px;
-  border: 0px dashed var(--content-header) !important;
+  border: 0px dashed var(--content-header_dark) !important;
   border-radius: 5px;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
 }
@@ -75,7 +76,7 @@ blockquote {
   margin-top: 30px;
   background-color: rgb(0, 0, 0) !important;
   padding: 10px 20px 10px 20px;
-  border: 0px dashed var(--content-header) !important;
+  border: 0px dashed var(--content-header_dark) !important;
   border-radius: 5px;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
 }
@@ -83,7 +84,7 @@ blockquote {
   padding: 0.5rem 1.5rem 1rem;
   border-radius: 10px;
   background: black !important;
-  border: 0px dashed var(--content-header) !important;
+  border: 1px dashed var(--content-header_dark) !important;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
 }
 .post-catalog_order::before {
@@ -94,7 +95,7 @@ blockquote {
   margin-top: 30px;
   background-color: rgb(0 0 0) !important;
   padding: 10px 20px 10px 20px;
-  border: 0px dashed var(--content-header) !important;
+  border: 0px dashed var(--content-header_dark) !important;
   box-shadow: 0px 0px 0px #b6e7d6 !important;
   border-radius: 5px;
 }
@@ -197,7 +198,7 @@ blockquote {
   margin: 1em 0;
   border: 9;
   border-radius: 2px;
-  border-top: 5px solid var(--content-header);
+  border-top: 5px solid var(--content-header_dark);
   margin-top: 30px;
 }
 
